--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -382,10 +382,7 @@ span::before {
       .views-row {
         @extend .col-md-4;
       }
-
-      .events-card .views-row {
-        @extend .col-md-6;
-      }
+      /* Fixed events? */
     }
   }
 }
