--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -726,7 +726,7 @@ pre code {
 .viewfield--view__sub_content .node-article .group-related > div .field__item .views-element-container > div .views-row,
 .node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .col-md-5, .col-md-4, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout > .region-inner > .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .field-committee-members .field__items > .field__item, .in-the-section .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row, .col-md-3, .page__footer .region-inner > .block, .col-md-2, .col-md-1, .col-sm,
 .col-sm-auto, .col-sm-12, .col-sm-11, .col-sm-10, .col-sm-9, .col-sm-8, .node-landing_page:not(.node-172) .group-header .landing-page__body, .col-sm-7, .col-sm-6, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .col-sm-5, .col-sm-4, .col-sm-3, .col-sm-2, .col-sm-1, .col,
-.col-auto, .col-12, .node-landing_page:not(.node-172) .group-header .landing-page__node-title.theme-landing-page .field-node-title-wrapper .field-node-title-inner, .col-11, .col-10, .col-9, .col-8, .col-7, .col-6, .col-5, .col-4, .col-3, .col-2, .col-1 {
+.col-auto, .col-12, .node-landing_page:not(.node-172) .group-header .landing-page__node-title.theme-landing-page .field-node-title-wrapper .field-node-title-inner, .basic-page__field-related-documents .field__item .related-documents__field-external-link, .col-11, .col-10, .col-9, .col-8, .col-7, .col-6, .col-5, .col-4, .col-3, .col-2, .col-1 {
   position: relative;
   width: 100%;
   padding-right: 7.5px;
@@ -800,7 +800,7 @@ pre code {
   max-width: 91.6666666667%;
 }
 
-.col-12, .node-landing_page:not(.node-172) .group-header .landing-page__node-title.theme-landing-page .field-node-title-wrapper .field-node-title-inner {
+.col-12, .node-landing_page:not(.node-172) .group-header .landing-page__node-title.theme-landing-page .field-node-title-wrapper .field-node-title-inner, .basic-page__field-related-documents .field__item .related-documents__field-external-link {
   flex: 0 0 100%;
   max-width: 100%;
 }
@@ -22866,6 +22866,16 @@ a.more-data-parline, .article__node-link a,
   border-bottom: 1px solid #00a8b4;
   font-weight: 400 !important;
 }
+.basic-page__field-related-documents .document__body {
+  font-size: 0.875rem;
+  line-height: 1rem;
+  margin-left: 16px;
+}
+.basic-page__field-related-documents .field__item .related-documents__field-external-link {
+  border-bottom: 1px solid #eeeeee;
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
 .basic-page__field-related-documents .field__item .related-documents__field-external-link a {
   display: flex;
   font-weight: 400;
@@ -22920,6 +22930,7 @@ a.more-data-parline, .article__node-link a,
 .basic-page__field-related-documents .document__file .file-size {
   white-space: nowrap;
   font-size: 0.875rem;
+  line-height: 1.2rem;
   padding: 0 0 0 8px;
   align-self: end;
 }
