Fix for typo oin block.scss

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1567,7 +1567,7 @@ a.btn {
 }
 
 /* All 'Sections' paras on landing pages are bounded */
-.node-landing_page .landing-page__field-content-section .p  aragraph--type--sections {
+.node-landing_page .landing-page__field-content-section .paragraph--type--sections {
   @extend .container;
 }
 .node-landing_page:not(.node-172) {
