Improve display of 5 news story layout. Needed check on which grid to apply height js on.

--- a/web/themes/ipu/templates/views/views-view-unformatted--articles--latest-5-generic.html.twig
+++ b/web/themes/ipu/templates/views/views-view-unformatted--articles--latest-5-generic.html.twig
@@ -56,11 +56,11 @@
             set row_classes = []
           %}
           {% if loop.index == 1 %}
-            <div class="col-md-6">
-            {% set row_classes = row_classes|merge(['col-md-12']) %}
-              <div{{ row.attributes.addClass(row_classes) }}>
+            <div class="col-md-6 d-flex align-items-stretch">
+            {% set row_classes = row_classes|merge([]) %}
+              {#<div{{ row.attributes.addClass(row_classes) }}>#}
                 {{ row.content }}
-              </div>
+              {#</div>#}
             </div>
           {% else %}
 
