--- a/web/themes/ipu/templates/navigation/menu--mega-menu-events.html.twig
+++ b/web/themes/ipu/templates/navigation/menu--mega-menu-events.html.twig
@@ -9,7 +9,7 @@
  *   - attributes: HTML attributes for the menu item.
  *   - below: The menu item child items.
  *   - title: The menu link title.
- *   - url: The menu link url, instance of \Drupal\Core\Url
+   *   - url: The menu link url, instance of \Drupal\Core\Url
  *   - localized_options: Menu link localized options.
  *   - is_expanded: TRUE if the link has visible children within the current
  *     menu tree.
@@ -18,14 +18,30 @@
  *   - in_active_trail: TRUE if the link is in the active trail.
  */
 #}
+
 {% import _self as menus %}
 
 {#
   We call a macro which calls itself to render the full tree.
   @see http://twig.sensiolabs.org/doc/tags/macro.html
 #}
+{# Only output if in current tree #}
+{% set is_current = false %}
 
-{{ menus.menu_links(items, attributes, 0) }}
+{# Hack for top level Events page #}
+{% if ( current_path == '/node/9838') %}
+  {% set is_current = true %}
+{% endif %}
+
+{% for item in items %}
+  {% if (item.in_active_trail) %}
+    {% set is_current = true %}
+  {% endif %}
+{% endfor %}
+
+{% if is_current %}
+  {{ menus.menu_links(items, attributes, 0) }}
+{% endif %}
 
 {% macro menu_links(items, attributes, menu_level) %}
   {% import _self as menus %}
