Slightly zoom map and give it a background border

--- a/web/modules/custom/ipu_map/css/ipu_map.css
+++ b/web/modules/custom/ipu_map/css/ipu_map.css
@@ -10,7 +10,7 @@
 
 .mapael .map {
     position: relative;
-    border-color:white;
+    border: 1px solid #eee;
     z-index: 3;
     width: 90%;
     margin-left: 5%;
