--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1802,3 +1802,20 @@ a.btn {
   }
 }
 
+.field__item__paragraph__callout-strip {
+  background-color: $secondary;
+  padding: 20px 0;
+  border-top: 4px solid $tertiary;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  .field-text, .field-text > * {
+    color: $ipu-white !important;
+  }
+  .field-link {
+    a {
+      @extend .btn;
+      @extend .btn-primary;
+      @extend .btn-sm;
+    }
+  }
+}
