Call to action buttons paragraph, plus adding to mega menu as a custom block.

--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -707,7 +707,7 @@ pre code {
 .field-content-section .paragraph--type--sections .field--type-viewfield .viewfield--view__sub_content .views-element-container > div .views-row,
 .viewfield--view__sub_content .node-article .group-related > div .field__item .views-element-container > div .views-row,
 .node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .node-article .group-related > div .field__item .views-element-container > div .views-row, .col-lg-3, .view-publications.view-display-id-page_1 .views-inner .views-row, .col-lg-2, .col-lg-1, .col-md,
-.col-md-auto, .col-md-12, .node-172 .group-header .landing-page__body, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .ultimenu__flyout .region-inner .block--views-block--theme-list-block-1-5, .col-md-7, .col-md-6, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .section-page__field-committee-members.field-committee-members .field__items .views-row, .section-page__field-committee-members.field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .field-content-section .paragraph--type--sections .field--type-viewfield .views-element-container > div .views-row, .field-content-section .paragraph--type--sections .field--type-viewfield .section-page-subpages-section .views-element-container > div .views-row, .section-page-subpages-section .node-article .group-related > div .field__item .views-element-container > div .views-row, .node-article .group-related > div .field__item .section-page-subpages-section .views-element-container > div .views-row,
+.col-md-auto, .col-md-12, .node-172 .group-header .landing-page__body, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .ultimenu__flyout .region-inner .block--views-block--theme-list-block-1-5, .col-md-7, .col-md-6, .ultimenu__item-3 .ultimenu__flyout .block, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .section-page__field-committee-members.field-committee-members .field__items .views-row, .section-page__field-committee-members.field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .field-content-section .paragraph--type--sections .field--type-viewfield .views-element-container > div .views-row, .field-content-section .paragraph--type--sections .field--type-viewfield .section-page-subpages-section .views-element-container > div .views-row, .section-page-subpages-section .node-article .group-related > div .field__item .views-element-container > div .views-row, .node-article .group-related > div .field__item .section-page-subpages-section .views-element-container > div .views-row,
 .viewfield--view__sub_content .row .views-row,
 .viewfield--view__sub_content .ultimenu__flyout .region-inner .views-row,
 .ultimenu__flyout .viewfield--view__sub_content .region-inner .views-row,
@@ -1132,7 +1132,7 @@ pre code {
     max-width: 41.6666666667%;
   }
 
-  .col-md-6, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .field-content-section .paragraph--type--sections .field--type-viewfield .views-element-container > div .views-row, .field-content-section .paragraph--type--sections .field--type-viewfield .section-page-subpages-section .views-element-container > div .views-row,
+  .col-md-6, .ultimenu__item-3 .ultimenu__flyout .block, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .field-content-section .paragraph--type--sections .field--type-viewfield .views-element-container > div .views-row, .field-content-section .paragraph--type--sections .field--type-viewfield .section-page-subpages-section .views-element-container > div .views-row,
 .viewfield--view__sub_content .row .views-row,
 .viewfield--view__sub_content .ultimenu__flyout .region-inner .views-row,
 .ultimenu__flyout .viewfield--view__sub_content .region-inner .views-row,
@@ -23660,6 +23660,38 @@ a.more-data-parline, .article__node-link a,
 .field__item__paragraph__callout-strip .field-text, .field__item__paragraph__callout-strip .field-text > * {
   color: #ffffff !important;
 }
+.paragraph--type--call-to-action {
+  background-color: #fff;
+  border: 1px solid #cccccc;
+  box-shadow: 0 0 3px 0 #cccccc;
+  margin-bottom: 10px;
+  padding: 8px;
+  font-size: 0.875rem;
+}
+.paragraph--type--call-to-action:hover {
+  background-color: #e98300;
+}
+.paragraph--type--call-to-action a {
+  font-size: 1.2rem;
+  color: #333333;
+  font-weight: 400;
+}
+.paragraph--type--call-to-action a:hover {
+  text-decoration: none;
+}
+.paragraph--type--call-to-action a:after {
+  font-family: "Font Awesome 5 Free", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: 900;
+  line-height: 1;
+  content: "\F061";
+  margin-left: 4px;
+}
+
 #main-nav {
   background-color: #fff;
   border-width: 1px 0 4px 0;
@@ -24085,6 +24117,7 @@ ol.breadcrumb {
 }
 
 /* Events flyout */
+/* Resources flyout */
 form input[type=text], form input[type=search], form select {
   padding: 0.125rem 0.5rem !important;
 }
