Data points on landing pages, align to top of text

--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -1684,7 +1684,7 @@ a.btn {
     }
     .group-body-and-data {
       @extend .row;
-      align-items: center;
+      //align-items: center;
       margin: 20px auto;
       @extend .container;
       .landing-page__field-data-points-for-theme {
