New block on countries view for members list on members page

--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -20692,6 +20692,11 @@ body {
   /*background-color: theme-color("light");*/
 }
 
+.hamburger {
+  background-color: #e98300;
+  color: #ffffff;
+}
+
 main {
   background-color: #fff !important;
 }
@@ -24672,32 +24677,54 @@ a.more-data-parline, .article__node-link a,
   box-shadow: #cccccc;
 }
 
-.viewfield--view__countries__block_1 h3, .viewfield--view__countries__block_1 .basic-page__field-related-content .field__label, .basic-page__field-related-content .viewfield--view__countries__block_1 .field__label, .viewfield--view__countries__block_1 .basic-page__field-related-documents .field__label, .basic-page__field-related-documents .viewfield--view__countries__block_1 .field__label {
+.viewfield--view__countries__block_1 h3, .viewfield--view__countries__block_1 .basic-page__field-related-content .field__label, .basic-page__field-related-content .viewfield--view__countries__block_1 .field__label, .viewfield--view__countries__block_1 .basic-page__field-related-documents .field__label, .basic-page__field-related-documents .viewfield--view__countries__block_1 .field__label,
+.viewfield--view__countries__block_members h3,
+.viewfield--view__countries__block_members .basic-page__field-related-content .field__label,
+.basic-page__field-related-content .viewfield--view__countries__block_members .field__label,
+.viewfield--view__countries__block_members .basic-page__field-related-documents .field__label,
+.basic-page__field-related-documents .viewfield--view__countries__block_members .field__label {
   clear: left;
   float: left;
   width: 40px;
   padding: 2px 10px;
   text-align: center;
 }
-.viewfield--view__countries__block_1 .item-list {
+.viewfield--view__countries__block_1 .item-list,
+.viewfield--view__countries__block_members .item-list {
   width: 100%;
   padding-bottom: 4px;
   border-bottom: 1px solid #cccccc;
   margin-bottom: 4px;
 }
-.viewfield--view__countries__block_1 ul {
+.viewfield--view__countries__block_1 ul,
+.viewfield--view__countries__block_members ul {
   list-style: none;
   width: calc(100% - 50px);
   padding: 0;
   margin: 0;
   display: inline-block;
 }
-.viewfield--view__countries__block_1 ul li {
+.viewfield--view__countries__block_1 ul li,
+.viewfield--view__countries__block_members ul li {
   list-style: none;
   display: inline-block;
 }
-.viewfield--view__countries__block_1 ul li a.non-member {
+.viewfield--view__countries__block_1 ul li a.non-member,
+.viewfield--view__countries__block_members ul li a.non-member {
   font-weight: 300;
+}
+
+.viewfield--view__countries__block_members li a:after {
+  content: ", ";
+}
+.viewfield--view__countries__block_members li:last-child a:after {
+  content: "";
+}
+.viewfield--view__countries__block_members .views-field-name .field-content a {
+  font-weight: 400;
+}
+.viewfield--view__countries__block_members .views-field-name .field-content span {
+  display: none;
 }
 
 .field__item__paragraph__callout-strip {
